<resources>
    <string name="app_name">Training1</string>
    <string name="signin_screen_title">Sign in to continue to Gmail</string>
    <string name="image_description">logo</string>
    <string name="create_account">Create an account</string>
    <string name="need_help">Need help?</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>
